Sun Apr 13 23:04:33 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/ctlib/unittests/cs_config.c added to cvs for patch 719581
	* src/tds/alternative_character_sets.h for tds_cannonical_charset_name()
	* src/tds/character_sets.h src/tds/iconv.c src/tds/read.c
	- Added tds_cannonical_charset_name() to look up character set names.
	- Allowed tds_get_char_data() to read across a character boundary.
	
Sun Apr 13 12:04:24 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/cspublic.h src/ctlib/cs.c 
	* src/ctlib/unittests/Makefile.am
	- patch 719581: cs_userdata option for cs_config by Swapna Anand

Sun Apr 13 11:06:49 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* INSTALL.CVS configure.in removed outdated macros, documented
	*  include/tdsiconv.h minor cleanup

Sat Apr 12 18:18:25 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* Makefile.am	distribute VMS-specific files
	* include/tdsiconv.h define ICONV_CONST even in absence of iconv.
	
Thu Apr 10 15:09:24 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsiconv.h src/tds/iconv.c src/tds/mem.c:
	- fix compile under win32

Thu Apr 10 14:08:50 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: disable debug by default

Thu Apr 10 13:54:59 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/tables.c:
	- remove some warnings

Thu Apr 10 13:43:02 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/ct_diagclient.c:
	- fixed test

Thu Apr 10 12:14:04 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/mem.c src/tds/unittests/common.c:
	- set ISO-8859-1 as default client charset, this make work many 
	  unittest

Tue Apr  8 15:42:21 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/tds/Makefile.am added character_sets.h

Tue Apr  8 11:31:17 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h src/tds/login.c delete commented-out code

Tue Apr 08 17:03:29 CET 2003  Frediano Ziglio <freddy77@angelfire.com>