@@ -1,3 +1,6 @@
+Mon Apr 14 09:25:46 EDT 2003	JK Lowden <jklowden@schemamania.org>
+	* src/tds/mem.c don't dereference NULL pointer in tds_free_locale().
+
 Sun Apr 13 23:04:33 EDT 2003	JK Lowden <jklowden@schemamania.org>
 	* src/ctlib/unittests/cs_config.c added to cvs for patch 719581
 	* src/tds/alternative_character_sets.h for tds_cannonical_charset_name()
